--- a/index.html
+++ b/index.html
@@ -12,27 +12,31 @@
 <body class="bg-body">
     <!-- inicio header -->
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light">
+        <nav class="navbar navbar-expand-sm navbar-light mr-auto">
             <img src="/src/img/99008818_2877661309014214_8984566666876682240_n.png" alt="logo" width="100px">
             <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavId">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <div class="collapse navbar-collapse " id="collapsibleNavId">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0 ">
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="">Ventas</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="">Alquiler</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="">Tasaciones</a>
+                    </li>
+                    <li>
                         <a class="nav-link" href="/src/html/paginaCalcularEscritura/calcularEscritura.html">Calculo de escritura</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Operaciones</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdownId">
-                            <a class="dropdown-item" href="#">Venta</a>
-                            <a class="dropdown-item" href="#">Alquiler</a>
-                            <a class="dropdown-item" href="#">Compra</a>
-                        </div>
+                    <li>
+                        <a class="nav-link" href="">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contacto</a>
@@ -40,7 +44,99 @@
                 </ul>
             </div>
         </nav>
-    </header>    
+    </header>
+    <div class="container">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/src/img/placa2-min.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="/src/img/placa1-min.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="/src/img/placa3-min.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Atrás</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Siguiente</span>
+            </a>
+        </div>
+    </div>    
+    <div class="container my-4">
+        <div>
+            <h3 class="mb-2">Propiedades destacadas</h3>
+            <div class="row">
+                <a  class="a-card col-md-3 col-sm-6 col-xs-12 p-1"href="goglee.com">
+                    <div class="card" style="width: 100%; cursor: pointer;">
+                        <img src="/src/img/1725637138.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h6 class="card-title">Duplex Miradores de Manantial</h6>
+                            <p class="card-text texto-card"><i class="fas fa-map-marker-alt"></i> Miradores de Manantiales, Córdoba</p>
+                            <p class="card-text">4 <i class="fas fa-door-open"></i> 3 <i class="fas fa-bed"></i> 3 <i class="fas fa-bath"></i> 1 <i class="fas fa-car"></i></p>
+                        </div>
+                        <hr class="m-0">
+                        <div class="card-body">
+                            <h3 class="text-center">USD 145.000</h3>
+                        </div>
+                    </div>
+                </a>
+                <a  class="a-card col-md-3 col-sm-6 col-xs-12 p-1"href="goglee.com">
+                    <div class="card" style="cursor: pointer;">
+                        <img src="/src/img/1725560743.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h6 class="card-title">Departamentos Torres H</h6>
+                            <p class="card-text texto-card"><i class="fas fa-map-marker-alt"></i> Av. Pueyrredón 724, Güemes, Córdoba</p>
+                            <p class="card-text">2 <i class="fas fa-door-open"></i> 1 <i class="fas fa-bed"></i> 1 <i class="fas fa-bath"></i></p>
+                        </div>
+                        <hr class="m-0">
+                        <div class="card-body">
+                            <h3 class="text-center">USD 47.000</h3>
+                        </div>
+                    </div>
+                </a>
+                <a  class="a-card col-md-3 col-sm-6 col-xs-12 p-1"href="goglee.com">
+                    <div class="card" style="cursor: pointer;">
+                        <img src="/src/img/1725618257.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h6 class="card-title">Casa 138m²</h6>
+                            <p class="card-text texto-card"><i class="fas fa-map-marker-alt"></i> Docta, Docta, Córdoba</p>
+                            <p class="card-text">5 <i class="fas fa-door-open"></i> 3 <i class="fas fa-bed"></i> 3 <i class="fas fa-bath"></i> 2 <i class="fas fa-car"></i></p>
+                        </div>
+                        <hr class="m-0">
+                        <div class="card-body">
+                            <h3 class="text-center">USD 118.000</h3>
+                        </div>
+                    </div>
+                </a>
+                <a  class="a-card col-md-3 col-sm-6 col-xs-12 p-1"href="goglee.com">
+                    <div class="card" style="cursor: pointer;">
+                        <img src="/src/img/1725931657.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h6 class="card-title">Casa 118m²</h6>
+                            <p class="card-text texto-card"><i class="fas fa-map-marker-alt"></i> Villa Rivera Indarte, Córdoba</p>
+                            <p class="card-text">3 <i class="fas fa-door-open"></i> 2 <i class="fas fa-bed"></i> 1 <i class="fas fa-bath"></i> 1 <i class="fas fa-car"></i></p>
+                        </div>
+                        <hr class="m-0">
+                        <div class="card-body">
+                            <h3 class="text-center">USD 105.000</h3>
+                        </div>
+                    </div>
+                </a>
+            </div>    
+        </div>
+    </div>
+    <!-- separar en el nav bar  -->
     <!-- fin header -->
     <footer>
         <div class="bg-dark text-white  displayFooter" style="height: auto;" >
@@ -59,9 +155,8 @@
                     </div>  
                     <div class="col-md-6 my-2">
                         <h5>Contáctenos</h5>
-                        <br>
-                        <div>Cleveland 5592. Barrio Santa Isabel segunda sección. Córdoba. Argentina.
-                            Tel: +54 9 351 3643917
+                        <div>Cleveland 5592. Barrio Santa Isabel segunda sección. Córdoba. Argentina. <br>
+                            Tel: +54 9 351 3643917 <br>
                             Tel: +54 9 351 2500514
                             <br>
                             <i class="far fa-envelope"></i><a href="mailto: gomezleo35@gmail.com"> inmobiliaria@gmail.com</a>
@@ -79,6 +174,7 @@
             </div>
         </div>
     </footer>
+    
     <script src="/src/js/script.js"></script>
     <script src="https://kit.fontawesome.com/f01eea33cd.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -86,3 +182,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
